# pjourney

./: CLAUDE.md  README.md  USER_MANUAL.md  main.py  pyproject.toml
docs/: ERROR_CODES.md
pjourney/: app.py  errors.py  export.py
pjourney/cloud/: credentials.py  dropbox_provider.py  provider.py
pjourney/db/: database.py  models.py
pjourney/screens/: admin.py  cameras.py  dashboard.py  film_stock.py  frames.py  lenses.py  login.py  rolls.py  splash.py  stats.py
pjourney/widgets/: app_header.py  confirm_modal.py  inventory_table.py
tests/: test_camera_form_modal.py  test_cloud_modals.py  test_cloud_provider.py  test_cloud_settings.py  test_confirm_modal.py  test_dashboard.py  test_database.py  test_dev_modals.py  test_dropbox_provider.py  test_errors.py  test_export.py  test_film_stock_modal.py  test_lens_form_modal.py  test_models.py  test_recipe_modals.py  test_scan_modal.py  test_stats_screen.py
