[project]
name = "pjourney"
version = "0.1.0"
description = "Camera & Film Inventory TUI"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.75.0",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
